Changes to be committed: cambiando estilo 	new file:   css/img/mesa.png 	modified:   css/index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <label for="input-texto">Solo letras minúsculas, sin acentos</label>
         <textarea class="text-input" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui" rows="5" cols="50"></textarea>
         <div class="button-container">
-          <input class="btn" type="submit" value="Encriptar !!!" id="btn-encriptar">
-          <input class="btn" type="submit" value="Desencriptar !!!" id="btn-desencriptar">
+          <input class="btn" type="submit" value="Encriptar 🔒" id="btn-encriptar">
+          <input class="btn" type="submit" value="Desencriptar 🔓" id="btn-desencriptar">
         </div>
       </form>
     </section>
   
     <section class="msg box">
-      <h2><label for="mensaje-texto">Mensaje encriptado:</label></h2>
+      <h2><label for="mensaje-texto">Mensaje <br>encriptado:</label></h2>
       <textarea class="text-input" cols="50" id="mensaje-texto" name="mensaje-texto" rows="5"></textarea>
       <input class="btn" type="submit" value="Copiar texto" id="btn-copy">
     </section>
