--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto con JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
   </head>
 
   <body>
@@ -32,8 +34,6 @@
       </section>
     </main>
 
-
-    <script src="js/index.js"></script>
   </body>
   
   <footer>
