--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto con JavaScript</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script>
+    
   </head>
 
   <body>
-    <h1 class="titulo">JavaScript Text Encryptor </h1>
-
+    <h1 class="title">JavaScript Text Encryptor </h1>
 
     <main class="main">
       <section class="form box">
-          <form id="formulario">
+          <form id="formulation">
             <label for="input-texto">Solo letras minúsculas, sin acentos</label>
             <textarea class="text-input" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui" rows="5" cols="50"></textarea>
             <div class="button-container">
@@ -34,13 +32,19 @@
       </section>
     </main>
 
-  </body>
   
-  <footer>
-    <p class="nombre">Fernando Covarrubias Catarino <br><a href="https://github.com/fercova91">
-      <img class="logos" src="css/img/github.png" alt="logo github">
-    </a> <a href="https://www.linkedin.com/in/fernando-covarrubias-93365b258/">
-    <img class="logos" src="css/img/linkedin.png" alt="logo linkedin">
-    </a></p>
-  </footer>
+  
+    <footer>
+      <p class="nombre">Fernando Covarrubias Catarino <br>
+        <a href="https://github.com/fercova91">
+          <img class="logos" src="css/img/github.png" alt="logo github">
+        </a> 
+        <a href="https://www.linkedin.com/in/fernando-covarrubias-93365b258/">
+          <img class="logos" src="css/img/linkedin.png" alt="logo linkedin">
+        </a>
+      </p>
+    </footer>
+
+    <script src="js/index.js"></script>
+  </body>
 </html>
