Changes to be committed: correccion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main class="main">
       <section class="form box">
-          <form id="formulation">
+          <form id="formulario">
             <label for="input-texto">Solo letras minúsculas, sin acentos</label>
             <textarea class="text-input" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui" rows="5" cols="50"></textarea>
             <div class="button-container">
